--- a/cogviewer.html
+++ b/cogviewer.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>COG viewer SATROMO</title>
+	<title>COG viewer POC EPSG 2056</title>
 	!-- Version 3.1 --> <!-- full stretch -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
